Fix #269: use `module-info.java` directly